--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber";
+@import "~@angular/material/theming";
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
