feat(): change action column

--- a/src/app/components/table/components/column-composer/column-composer.component.html
+++ b/src/app/components/table/components/column-composer/column-composer.component.html
@@ -30,6 +30,7 @@
     ></ng-container>
   </td>
   <td
+    *matFooterCellDef
     mat-footer-cell
     [ngClass]="getColumnClasses(columnConfig)"
     [ngStyle]="columnConfig.style!"
