--- a/src/app/components/table/container/table.component.html
+++ b/src/app/components/table/container/table.component.html
@@ -24,7 +24,7 @@
       <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     </ng-container>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
-    <!-- <tr mat-footer-row *matFooterRowDef="columnsToDisplay"></tr> -->
+    <tr mat-footer-row *matFooterRowDef="columnsToDisplay"></tr>
   </table>
 </div>
 <ngmy-table-paginator *ngIf="!!_pagingConfig" [config]="_pagingConfig"></ngmy-table-paginator>
