fix(): style for cell

--- a/src/app/components/table/components/columns/nested-table-column/nested-table-column.component.html
+++ b/src/app/components/table/components/columns/nested-table-column/nested-table-column.component.html
@@ -1,7 +1,7 @@
 <ng-container matColumnDef>
-  <td mat-cell *matCellDef="let row" [attr.colspan]="attrColspan">
+  <td class="nested-table-column" mat-cell *matCellDef="let row" [attr.colspan]="attrColspan">
     <ngmy-table
-      class="nested-table-column"
+      class="nested-table"
       [disableFilter]="true"
       [hideHeader]="true"
       [columnsConfig]="columnsConfig"
