--- a/src/app/components/table/styles/table.scss
+++ b/src/app/components/table/styles/table.scss
@@ -2,7 +2,7 @@
   width: 100%;
 }
 
-.mat-table ::ng-deep .nested-table-column .mat-cell {
+.mat-table ::ng-deep .nested-table-column {
   padding: 0;
 }
 
