--- a/src/app/components/table/components/columns/action-column/action-column.component.html
+++ b/src/app/components/table/components/columns/action-column/action-column.component.html
@@ -7,11 +7,7 @@
   ></button>
 </ng-container>
 <ng-template #iconButton>
-  <button
-    class="action-column"
-    ene-button
-    [disabled]="isButtonDisabled(context.columnConfig, context.row)"
-  >
+  <button class="action-column" ene-button [disabled]="isButtonDisabled(context.columnConfig, context.row)">
     {{ context.columnConfig.actionLabel }}
   </button>
 </ng-template>
