refactor(): changed internal logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,12 @@
   [data]="data"
   (tableAction)="onTableAction($event)"
 ></ngmy-table> -->
-<!-- <button (click)="onClick()">Click</button> -->
+<button (click)="onClick()">Click</button>
 
 <tpm-carousel>
   <tpm-carousel-inner>
     <tpm-carousel-item *ngFor="let item of list$ | async">
-      <div class="container">
-        {{ item }}
-      </div>
+      <div class="container">{{ item }}</div>
     </tpm-carousel-item>
   </tpm-carousel-inner>
   <tpm-carousel-indicators></tpm-carousel-indicators>
