--- a/src/app/components/carousel/components/carousel-indicators/carousel-indicators.component.html
+++ b/src/app/components/carousel/components/carousel-indicators/carousel-indicators.component.html
@@ -1,6 +1,5 @@
 <div class="carousel-indicators">
-  active: {{ active }}, length: {{ (items$ | async)?.length }}
-  <ng-container *ngFor="let item of items$ | async; let index = index">
+  <ng-container *ngFor="let item of items; let index = index">
     <button
       type="button"
       [attr.data-button-target]="index"
